updated status send on backend and minor whitespace fixes

--- a/src/components/register.css
+++ b/src/components/register.css
@@ -25,7 +25,7 @@
 	display: block;
 	padding: 10px;
 	width: 50%;
-	max-width: 45%;
+	max-width: 50%;
 	height: 385px;
 	position: fixed;
 	z-index: 100;
